repoze.configuration Changelog
==============================

Next release
------------

- ...

0.2 (2009-07-13)
----------------

- Trying to read any directive section that wasn't a YAML mapping
  caused a TypeError (e.g. ``construct_scalar takes no argument
  'deep'``).

0.1 (2009-06-22)
----------------

- Initial release.