@@ -4,7 +4,8 @@ repoze.configuration Changelog
 Next release
 ------------
 
-- ...
+- It was not possible to resolve the single dot ``.`` using
+  repoze.configuration.context.Context.resolve to the current package.
 
 0.2 (2009-07-13)
 ----------------
